--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "gatsby-remark-copy-linked-files": "1.5.37",
     "gatsby-remark-design-system": "^1.0.9",
     "gatsby-remark-embed-snippet": "^1.0.22",
+    "gatsby-remark-embedded-codesandbox": "^1.2.0",
     "gatsby-remark-emoji": "^0.0.2",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.63",
