--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 .gatsby-context.js
 .sass-cache/
-public/
+/public
 .cache/
 .vscode/
 .DS_Store
@@ -10,4 +10,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .eslintcache
-.env
+/.env
