--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "gatsby-remark-embedded-codesandbox-towavephone": "^1.3.2",
     "gatsby-remark-emoji": "^0.0.2",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-graph": "^0.2.6",
+    "gatsby-remark-graph": "0.2.2",
     "gatsby-remark-images": "^1.5.63",
     "gatsby-remark-katex": "^1.0.14",
     "gatsby-remark-prismjs": "^3.13.0",
