--- a/static/examples/international-official-website-technical-difficulties/line-by-line-display-react-spring/package.json
+++ b/static/examples/international-official-website-technical-difficulties/line-by-line-display-react-spring/package.json
@@ -23,7 +23,8 @@
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "react-scripts": "^4.0.3",
-    "customize-cra": "^1.0.0"
+    "customize-cra": "^1.0.0",
+    "optimize-css-assets-webpack-plugin": "6.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
