--- a/static/examples/international-official-website-technical-difficulties/use-antd-modal-hook/package.json
+++ b/static/examples/international-official-website-technical-difficulties/use-antd-modal-hook/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "4.7.0"
   },
   "devDependencies": {
+    "@our-patches/postcss-px-to-viewport": "^1.2.0",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "antd-dayjs-webpack-plugin": "^1.0.6",
@@ -23,6 +24,8 @@
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "optimize-css-assets-webpack-plugin": "6.0.1",
+    "postcss-viewport-height-correction": "^1.1.1",
+    "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "^3.3.0",
     "typescript": "^4.6.2"
