--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "re-resizable": "^6.9.0",
     "react-helmet": "^5.2.0",
     "react-instantsearch": "^5.0.3",
-    "react-share": "^2.1.1"
+    "react-share": "^2.1.1",
+    "spark-md5": "^3.0.2"
   },
   "volta": {
     "node": "10.24.1",
