--- a/static/examples/amap-big-data-component-optimize/polyline-2/package.json
+++ b/static/examples/amap-big-data-component-optimize/polyline-2/package.json
@@ -10,31 +10,18 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "ahooks": "^3.3.10",
-    "antd": "^4.22.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "simplify-js": "^1.2.4"
   },
   "devDependencies": {
-    "antd-dayjs-webpack-plugin": "^1.0.6",
-    "babel-plugin-import": "^1.13.3",
-    "customize-cra": "^1.0.0",
+    "@rspack/cli": "^0.1.0",
     "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "react-app-rewired": "^2.2.1",
-    "react-scripts": "^5.0.1"
+    "less-loader": "^11.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "start": "rspack serve",
+    "build": "rspack build"
+  }
 }
