feat: 更新rust练手测试

--- a/template/cra-js-template/.env
+++ b/template/cra-js-template/.env
@@ -1,2 +1,9 @@
 SKIP_PREFLIGHT_CHECK=true
 DISABLE_ESLINT_PLUGIN=true
+GENERATE_SOURCEMAP=false
+PORT=3000
+BROWSER=none
+
+# LAZY_BUILD=true
+# DISABLE_CACHE=true
+# DEBUG_CACHE=true
