--- a/template/cra-js-template/package.json
+++ b/template/cra-js-template/package.json
@@ -7,6 +7,19 @@
     "starter"
   ],
   "main": "src/index.js",
+  "scripts": {
+    "build": "react-app-rewired build",
+    "eject": "react-app-rewired eject",
+    "sort": "npx sort-package-json",
+    "start": "react-app-rewired start",
+    "test": "react-app-rewired test --env=jsdom"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "ahooks": "^3.3.10",
@@ -17,24 +30,20 @@
     "simplify-js": "^1.2.4"
   },
   "devDependencies": {
-    "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "react-app-rewired": "^2.2.1",
-    "react-scripts": "npm:@towavephone/react-scripts@^5.0.2"
+    "react-scripts": "npm:@towavephone/react-scripts@^5.0.2",
+    "thread-loader": "^3.0.4",
+    "webpack": "5.78.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-dev-server": "4.13.2",
+    "webpackbar": "^5.0.2"
   },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "volta": {
+    "node": "14.20.0",
+    "pnpm": "7.14.1"
+  }
 }
