--- a/static/examples/amap-browser-compatibility/example-1/package.json
+++ b/static/examples/amap-browser-compatibility/example-1/package.json
@@ -17,8 +17,7 @@
     "ahooks": "^3.3.10",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "simplify-js": "^1.2.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@rspack/cli": "0.3.11",
