--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,6 +21,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - name: Install libpng12
+      run: sudo apt-get update && sudo apt-get install -y libpng12-0
     # 切代码
     - name: Checkout
       uses: actions/checkout@v2
